--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-compass": "~0.2.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-csslint": "~0.1.2",
+    "liquid-node": "0.1.2",
     "grunt-liquid": "~0.0.3",
     "grunt-prettify": "0.3.1",
     "grunt-string-replace": "~0.2.4",
